Fix Btn icon (diff size icon no more overflow

--- a/assets/sass/atoms/_input-group.scss
+++ b/assets/sass/atoms/_input-group.scss
@@ -38,7 +38,7 @@
       border-bottom-left-radius: 0;
 
       &.btn-icon {
-        max-height: 48px;
+        max-height: 2.9em;
         padding-bottom: 0.6em;
       }
     }
