--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -15,7 +15,7 @@ header {
   }
 
   .global-search {
-    margin-top: 26px;
+    margin-top: 25px;
     opacity: 0;
     transition: opacity 0.25s ease-in-out;
     @media (min-width: $screen-sm-min) {
